update #main-wrapper styling to avoid overlapping elements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,16 @@
 html, body {
   height: 100%;
+}
+
+body {
   display: flex;
   flex-flow: column;
+}
+
+#main-wrapper {
+  flex: 1
+}
+
+a {
+  cursor: pointer;
 }
